This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-02-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.0
	
	* INSTALL: added some platform specific build instructions.

	* tests/Clock.hh: replaced "long long" with int64_t.

	* src/OstringStream.cpp: fix typo.

	* src/Appender.cpp: added missing Mutex.

	* include/log4cpp/threading/OmniThreads.hh: added Doxygen comments.

	* NEWS: release 0.3.0.
	
	* configure.in: upped release to 0.3.0 and LT version to 4.0.0
	
2002-02-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in: integrated check of omnithreads.
	* m4/BB_CHECK_OMNITHREADS.m4: added

	* include/log4cpp/threading/DummyThreads.hh: scoped lock is now
	an integer.

	* include/log4cpp/Category.hh, 
	include/log4cpp/FixedContextCategory.hh,
	include/log4cpp/HierarchyMaintainer.hh,
	include/log4cpp/NDC.hh,
	src/Category.cpp, src/FixedContextCategory.cpp,
	src/HierarchyMaintainer.cpp, src/NDC.cpp:
	added threadsafety provisions.

	* include/log4cpp/*.hh: replaced #include"" with #include<>
	* src/*.cpp: replaced #include"" with #include<>

	* include/log4cpp/Appender.hh, src/Appender.cpp:
	added Mutex for _allAppender map.

2002-02-08 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/Threading.hh,
	include/log4cpp/threading/OmniThreads.hh,
	include/log4cpp/threading/DummyThreads.hh,
	include/log4cpp/threading/BoostThreads.hh,
	include/log4cpp/threading/Makefile.am: added
	
2002-02-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/AppenderSkeleton.cpp: doAppend(): correct comparison of 
	_threshold against event priority (bug #513481).

	* tests/Clock.cpp: add missing 'std::'.

2002-01-27 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.2.7
	
	* configure.in: upped version to 0.2.7.
	
	* testbench.cpp: added more measurements, using crude cut&paste 
	of code.

	* NEWS: set release date for 0.2.7, added bug #506907 fixed.
